fix checkstyle errors